--- a/example.env
+++ b/example.env
@@ -10,3 +10,8 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgresql://YYYYYYYYYYYYYYY:XXXXXXXXXXXX@ep-cool-cell-adumdwzq-pooler.XXXXXXXXXXXXXXXXXX/neondb?sslmode=require&channel_binding=require"
+
+
+# JWT Configuration
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production-please"
+JWT_EXPIRES_IN="15m"
