--- a/example.env
+++ b/example.env
@@ -9,9 +9,13 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
+# Database Configuration
 DATABASE_URL="postgresql://YYYYYYYYYYYYYYY:XXXXXXXXXXXX@ep-cool-cell-adumdwzq-pooler.XXXXXXXXXXXXXXXXXX/neondb?sslmode=require&channel_binding=require"
-
 
 # JWT Configuration
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production-please"
 JWT_EXPIRES_IN="15m"
+
+# Application Configuration
+NODE_ENV="development"
+PORT="3001"
