fix: use EC2_USERNAME variable instead of hardcoded ubuntu path
- Change APP_DIR to use secrets.EC2_USERNAME dynamically
- Supports batman or any other username configured in secrets
- Fixes Permission denied error in deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   APP_NAME: nestjs-api
-  APP_DIR: /home/ubuntu/apps/nestjs-api
+  APP_DIR: /home/${{ secrets.EC2_USERNAME }}/apps/nestjs-api
   DOCKER_COMPOSE_VERSION: "2.24.0"
 
 jobs:
